examples/test/testpolicy3620.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3620
  namespace: namespace139
spec:
  podSelector:
    matchLabels:
      key49: value21
      key26: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value8
          key12: value17
          key35: value38
      podSelector:
        matchLabels:
          key20: value29
